updated the source directory to the workflow file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_SCANNER_OPTS: "-Dsonar.sources=src -Dsonar.tests=tests"
+          SONAR_SCANNER_OPTS: "-Dsonar.sources=src/requests -Dsonar.tests=tests"
